--- a/test_autoform/test_autoform.html
+++ b/test_autoform/test_autoform.html
@@ -5,16 +5,39 @@
 <body>
   {{> hello}}
   
-  {{> insertBookForm}}  
+  {{> leaderboard}}
+  
+  {{> insertBookForm}}
+  
+  {{> updateBookForm}}
 
 </body>
 
+<template name="insertBookForm">
+  {{> quickForm collection="Books" id="insertBookForm" type="insert"}}
+</template>
+
+<template name="leaderboard">
+  <div class="leaderboard">
+    {{#each books}}
+      {{> book}}
+    {{/each}}
+  </div>
+</template>
+
+<template name="book">
+  <div class="book {{selected}}">
+    <span class="name">{{name}}</span>
+    <span class="score">{{score}}</span>
+  </div>
+</template>
+  
 <template name="hello">
   <h1>Hello World!</h1>
   {{greeting}}
   <input type="button" value="Click" />
 </template>
 
-<template name="insertBookForm">
-  {{> quickForm collection="Books" id="insertBookForm" type="insert"}}
+<template name="updateBookForm">
+  {{> quickForm collection="Books" doc=editingDoc id="updateBookForm" type="update"}}
 </template>
